# roic

./: .gitignore  pyproject.toml  requirements.txt
ROIC/: roic.py  scraper.py
src/ROIC/: roic.py  scraper.py  utils.py
tests/: test_roic.py
