[build-system]
requires = ["setuptools>=61.0", "wheel"]        
build-backend = "setuptools.build_meta"

[project]
name = "roic"                                   
version = "0.0.1"
description = "A library to scrape data from ROIC."
readme = "README.md"
license = { text = "MIT" }                      
requires-python = ">=3.12"
authors = [
  { name = "", email = "test@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "pandas",
  "selenium",
  "webdriver-manager",
]

# add pointers to your homepage / repo / docs
[project.urls]
"Homepage" = "https://github.com/yourusername/roic"
"Repository" = "https://github.com/yourusername/roic.git"
"Documentation" = "https://yourusername.github.io/roic/"

#–– Setuptools-specific config ––
[tool.setuptools]
include-package-data = true                     

[tool.setuptools.packages.find]
where = ["src"]                                 
